--- a/internals/Cargo.toml
+++ b/internals/Cargo.toml
@@ -1,8 +1,18 @@
 [package]
-name = "internals"
+name = "crypto-internals"
 version = "0.1.0"
 edition = "2021"
 
-# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
+[features]
+default = []
+std = ["alloc"]
+alloc = []
+
+[package.metadata.docs.rs]
+all-features = true
+rustdoc-args = ["--cfg", "docsrs"]
 
 [dependencies]
+
+[dev-dependencies]
+
