--- a/hashes/Cargo.toml
+++ b/hashes/Cargo.toml
@@ -1,8 +1,36 @@
 [package]
-name = "hashes"
+name = "lubanso-crypto-hashes"
 version = "0.1.0"
+readme = "README.md"
 edition = "2021"
+exclude = ["tests", "contrib"]
 
-# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
+[features]
+default = ["std"]
+std = ["internals/std"]
+alloc = ["internals/alloc"]
+schemars = ["actual-schemars", "dyn-clone"]
+serde-std = ["serde/std"]
+
+[package.metadata.docs.rs]
+all-features = true
+rustdoc-args = ["--cfg", "docsrs"]
 
 [dependencies]
+internals = { path = "../internals", package = "lubanso-crypto-internals" }
+
+core2 = { version = "0.3.0", default_features = false, optional = true }
+# Only enable this if you explicitly do not want to use "std", otherwise enable "serde-std".
+serde = { version = "1.0", default-features = false, optional = true }
+# Do NOT use this as a feature! Use the `schemars` feature instead. Can only be used with "std" enabled.
+actual-schemars = { package = "schemars", version = "<=0.8.3", optional = true }
+# Do NOT enable this dependency, this is just to pin dyn-clone (transitive dep from schemars)
+# because 1.0.8 does not build with Rust 1.41.1 (because of useage of `Arc::as_ptr`).
+dyn-clone = { version = "<=1.0.7", default_features = false, optional = true }
+
+[dev-dependencies]
+serde_test = "1.0"
+serde_json = "1.0"
+
+[target.wasm32-unknown-unknown.dev-dependencies]
+wasm-bindgen-test = "0.3"
