--- a/hashes/Cargo.toml
+++ b/hashes/Cargo.toml
@@ -1,5 +1,5 @@
 [package]
-name = "lubanso-crypto-hashes"
+name = "lubanso-hashes"
 version = "0.1.0"
 readme = "README.md"
 edition = "2021"
@@ -17,7 +17,7 @@ all-features = true
 rustdoc-args = ["--cfg", "docsrs"]
 
 [dependencies]
-internals = { path = "../internals", package = "lubanso-crypto-internals" }
+internals = { path = "../internals", package = "lubanso-internals" }
 
 core2 = { version = "0.3.0", default_features = false, optional = true }
 # Only enable this if you explicitly do not want to use "std", otherwise enable "serde-std".
