--- a/hashes/fuzz/Cargo.toml
+++ b/hashes/fuzz/Cargo.toml
@@ -1,5 +1,5 @@
 [package]
-name = "lubanso_crypto_hashes-fuzz"
+name = "lubanso_hashes-fuzz"
 version = "0.1.0"
 
 [package.metadata]
@@ -11,7 +11,7 @@ honggfuzz_fuzz = ["honggfuzz"]
 
 [dependencies]
 honggfuzz = { version = "0.5", optional = true }
-lubanso-crypto-hashes = { path = "..", features = ["serde"] }
+lubanso-hashes = { path = "..", features = ["serde"] }
 rust-crypto = "0.2"
 
 serde = "1.0"
